# sd-business-intel

./: .gitignore  .mcp.json  CLAUDE.md  README.md  phase_2_spec.md  pyproject.toml  render.yaml  requirements-api.txt  sd-business-intel-bootstrap.md
.github/workflows/: refresh.yml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: area_business_by_category.parquet  area_profile.parquet  business_age_by_area.parquet  business_age_stats.parquet  business_by_zip.parquet  business_summary.parquet  city_averages.parquet  demographics_by_zip.parquet  momentum_by_area.parquet  momentum_scores.parquet  neighborhood_profile.parquet  trend_311_monthly.parquet  trend_business_formation.parquet  zip_centroids.parquet  zip_to_neighborhood.parquet
docs/plans/: 2026-02-12-phase-2-deeper-local-insights.md  2026-02-12-phase-2.5-design.md  2026-02-12-phase-2.5-implementation.md  2026-02-12-phase-3-design.md  2026-02-13-phase-3-implementation.md
pipeline/: build.py  ingest_btax.py  ingest_census.py  ingest_civic.py  naics_map.py  transform.py
prompts/: task4-rankings-table.md  task5-distribution-context.md  task6-category-deep-dive.md
tests/: test_phase3_smoke.py
